--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         Web制作、システム開発、機械学習などを幅広く学び、技術で課題を解決する面白さに魅力を感じました。<br>
         特に、アルゴリズム設計やデータベース連携など、システムの仕組みを考えることが好きで、
         PHPやJavaを用いたWebアプリ開発にも取り組んでいます。<br>
-        今後は、現場での経験を積みながら、チームと共に成長できるシステムエンジニアを目指しています。
+        今後は、現場での経験を積みながら、チームと共に成長できるエンジニアを目指しています。
       </p>
     </section>
 
