--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
           Python＋scikit-learnで構築し、HTML上で診断結果を表示。
         </p>
         <a href="https://animal-predictor.onrender.com" target="_blank" rel="noopener noreferrer" class="btn">Demoを開く</a>
+        <p>※初回アクセス時は数秒間お待ちいただくことがあります（無料ホスティングのため）。</p>
       </div>
 
       <div class="project">
