--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <section id="intro">
       <h2>自己紹介</h2>
       <p>
-        専門学校東京ビジネス・アカデミー AIシステム学科に在学中の<ruby>LIU<rt>リュウ</rt></ruby><ruby> ZHENHUA<rt>シンカ</rt></ruby>です。<br>
-        Web制作、システム開発、機械学習などを幅広く学び、技術で課題を解決する面白さに魅力を感じました。<br>
-        特に、アルゴリズム設計やデータベース連携など、システムの仕組みを考えることが好きで、
-        PHPやJavaを用いたWebアプリ開発にも取り組んでいます。<br>
+    専門学校東京ビジネス・アカデミーのAIシステム学科、AIエンジニア専攻に通っているリュウ シンカです。<br>
+    趣味は筋トレとオンラインゲームの「ファイナルファンタジー14」です。筋トレは週に2〜3回、ジムで継続しており、生活習慣の改善や集中力の向上にもつながっています。<br>
+    ゲームでは仲間と協力してダンジョンに挑戦する中で、普段はヒーラーとしてチームを支えることが多いですが、慣れてくるとDPS（アタッカー）にも挑戦して、チームを素早く勝利に導くのが楽しいです。<br>
+    長所は、新しいことに挑戦し、繰り返し努力することで確実に成長できるところです。慎重になりすぎて行動が遅くなる面もありますが、最近は「まずやってみる」→「あとで改善する」を意識して取り組んでいます。<br>
         今後は、現場での経験を積みながら、チームと共に成長できるエンジニアを目指しています。
-      </p>
+  </p>
     </section>
 
     <section id="skills">
